--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -214,10 +214,12 @@ a:hover {
   font-family: 'titilliumregular', sans-serif;
   text-transform: uppercase;
   border-bottom: 1px solid #eeeeee;
-  margin-top: 9px;
-  /* eye balling the lineheight bug */
+  margin-top: 30px;
+  /*
+  margin-top: 9px;/* eye balling the lineheight bug
   margin-left: 15px;
   margin-right: 15px;
+*/
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
