--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -1,6 +1,17 @@
 /*
  *  Fonts
  */
+//@font-face {
+//    font-family: 'titilliumregular';
+//    src: url(@font-src);
+//    src: url(@font-src-embedded-opentype) format('embedded-opentype'),
+//         url(@font-src-woff) format('woff'),
+//         url(@font-src-truetype) format('truetype'),
+//         url(@font-src-svg) format('svg');
+//    font-weight: normal;
+//    font-style: normal;
+//}
+
 @font-face {
     font-family: 'titilliumregular';
     src: url('http://matrixfox.com/fonts/titillium-regular-webfont.eot');
@@ -21,7 +32,7 @@ body {
   margin-left:auto;
   margin-right:auto;
   background: url('http://matrixfox.com/images/stressed_linen.png') center center;
-  // wordpress support
+  // wordpress
   //background: url('/wp-content/themes/ocultism/images/stressed_linen.png') center center;
   background-color: #000;
   color: #fff;
@@ -112,14 +123,12 @@ a:hover {
   text-transform:uppercase;
   border-bottom: 1px solid #eeeeee;
   margin-top: 30px;
-  
+
 //wordpress
-/*
-  margin-top: 9px;/* eye balling the lineheight bug
-  margin-left: 15px;
-  margin-right: 15px;
-*/
-  
+//  margin-top: 9px;/* eye balling the line-height bug */
+//  margin-left: 15px;
+//  margin-right: 15px;
+
 -webkit-user-select: none;
 -khtml-user-select: none;
 -moz-user-select: none;
@@ -133,24 +142,23 @@ user-select: none;
 }
 
 //wordpress
-/*
-#branding {
-    line-height: 1;
-    h1 {
-        line-height: 1;
-    }
+//#branding {
+//    line-height: 1;
+//    h1 {
+//        line-height: 1;
+//    }
+//
+//  #site-title {
+//    font-size: 36px;
+//  }
+//  #site-description {
+//    color: @red;
+//    font-size: 2em;
+//    padding-bottom: 5px;
+//
+//  }
+//}
 
-  #site-title {
-    font-size: 36px;
-  }
-  #site-description {
-    color: @red;
-    font-size: 2em;
-    padding-bottom: 5px;
-
-  }
-}
-*/
 
 /* logo */
 .navbar-header {
@@ -176,29 +184,23 @@ span {
 }
 
 //wordpress
-/*
-.current_page_item a {
-  color: @red;
-}
-
-/* hover effects
-.nav > li > a:hover,
-.nav > li > a:focus {
-  background-color: rgba(0,0,0,0);
-  color: @red;
-}
-
-/* tempStrap: until nav description tags
-.navbar-nav {
-  margin-top: 18px;
-}
-
-/* sidebar
-#s {
-  color: black;
-}
-
-*/
+//.current_page_item a {
+//  color: @red;
+//}
+/* hover effects */
+//.nav > li > a:hover,
+//.nav > li > a:focus {
+//  background-color: rgba(0,0,0,0);
+//  color: @red;
+//}
+/* tempStrap: until nav description tags */
+//.navbar-nav {
+//  margin-top: 18px;
+//}
+/* sidebar */
+//#s {
+//  color: black;
+//}
 
 
 .active a {
@@ -265,19 +267,19 @@ span {
 /*
  *  WordPress Home
  */
-/*
-.page-title {
-    font-size: 1.5em;
-    text-transform:uppercase;
-    margin-top: 10px;
-    margin-bottom: 10px;
- /*   line-height: 1.25; fixes flicker bug
+//wordpress
+//.page-title {
+//    font-size: 1.5em;
+//    text-transform:uppercase;
+//    margin-top: 10px;
+//    margin-bottom: 10px;
+/*   line-height: 1.25; fixes flicker bug */
+//
+//    span {
+//        color: @red;
+//    }
+//}
 
-    span {
-        color: @red;
-    }
-}
-*/
 
 
 /*
@@ -395,27 +397,23 @@ span {
 
 
 
+
+
+
 /*
  *  Blog
  */
 //wordpress
-/*
-.post:nth-of-type(odd) {
-  background: rgba(88,88,88,0.3);
-}
-.post {
-border-bottom: 1px solid #eeeeee;
-}
-.post:last-child {
-  border-bottom: 0px;
-}
-*/
+//.post:nth-of-type(odd) {
+//  background: rgba(88,88,88,0.3);
+//}
+//.post {
+//border-bottom: 1px solid #eeeeee;
+//}
+//.post:last-child {
+//  border-bottom: 0px;
+//}
 
-
-
-/*
- *  Blog
- */
 figcaption a {
 display:inline-block;
 }
@@ -448,37 +446,31 @@ td, th {
  *  Contact
  */
 //wordpress
-/*
-h1.entry-title  {
-    font-size: 1.5em;
-    text-transform:uppercase;
-}
-*/
+//h1.entry-title  {
+//    font-size: 1.5em;
+//    text-transform:uppercase;
+//}
+
 
 
 /*
  *  Footer
  */
 //wordpress
-/*
-#footer {
-  border-top: 1px solid #fff;
-  padding-top: 20px;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-bottom: 20px;
+//#footer {
+//  border-top: 1px solid #fff;
+//  padding-top: 20px;
+//  margin-left: 15px;
+//  margin-right: 15px;
+//  margin-bottom: 20px;
+//
+//#copyright, p:nth-child(1) {
+//  text-transform:uppercase;
+//  color: #777;
+//  font-size: 0.8em;
+//}
+//}
 
-#copyright, p:nth-child(1) {
-  text-transform:uppercase;
-  color: #777;
-  font-size: 0.8em;
-}
-}
-*/
-
-/*
- *  Footer
- */
 footer {
   clear:both;
   border-top: 1px solid #fff;
