--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h1 class="navbar-brand">Matrixfox</h1><br><span class="motto">Responsive Designer</span>
+          <h1 class="navbar-brand">Matrixfox</h1><br><span class="motto">Software Engineer</span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
