--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -472,6 +472,12 @@ footer {
   margin-bottom: 20px;
   margin-top: 20px;
 
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+  
 small, p:nth-child(1) {
   text-transform:uppercase;
   color: #777;
