--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <script src="/javascripts/libs/html5shiv.js"></script>
     <script src="/javascripts/libs/respond.min.js"></script>
     <![endif]-->
-    <link href="/stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
     <section class="container-fluid">
@@ -57,9 +57,9 @@
       </footer>
       <!-- /END CONTAINER -->
     </section>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
