--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -445,7 +445,10 @@ display:inline-block;
 //    text-transform:uppercase;
 //}
 
-
+.twitter {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 
 /*
  *  Footer
