--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 
-{% capture url_parts %} {{ page.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
+{% capture url_parts %}{{ page.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
 {% capture num_parts %}{{ url_parts | number_of_words | minus: 1 }}{% endcapture %}
 {% assign previous="" %}
 <ol class="breadcrumb">
  {% if num_parts == "0" or num_parts == "-1" %}
-  <li><a href="/">home</a> / </li>
+  <li><a href="/">home</a></li>
  {% else %}
-  <li><a href="/">home</a> / </li>
+  <li><a href="/">home</a></li>
   {% for unused in page.content limit:num_parts %}
    {% capture first_word %}{{ url_parts | truncatewords:1 | remove:"..."}}{% endcapture %}
    {% capture previous %}{{ previous }}/{{ first_word }}{% endcapture %}
