--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -114,7 +114,7 @@ code {
 }
 .breadcrumb > li + li:before {
   padding: 0;
-  padding-left: 5px;
+  padding-left: 0px;
 }
 /* Main Style Sheet */
 /*
@@ -401,6 +401,9 @@ figcaption a {
 .post {
   border-top: 1px solid #777;
   margin-top: 20px;
+}
+.breadcrumb > li + li:nth-child(3) {
+  padding-left: 5px;
 }
 /*
  *  Contact
