--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
  {% endif %}
 </ol>
 
-<article>
+<article class="blog-post">
 	<h1>{{page.title}}</h1>
   <small>Posted: {{page.posted}}</small>
   {{content}}
