--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -407,6 +407,34 @@ figcaption a {
 .breadcrumb > li + li:nth-child(3) {
   padding-left: 5px;
 }
+.blog-post h2 {
+  padding-top: 16px;
+  margin-top: 24px;
+  padding-bottom: 8px;
+  font-size: 2em;
+  border-bottom: 1px solid #21262d;
+}
+.blog-post h3 {
+  margin-bottom: 10px;
+  padding-top: 6px;
+  font-size: 20px;
+}
+.blog-post p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+li ul {
+  margin-bottom: 8px;
+}
+.alert {
+  border-radius: 0px;
+}
+.alert-primary {
+  border-left-color: #2f81f7;
+}
+.alert-warning {
+  border-left-color: #f0ad4e;
+}
 /*
  *  Contact
  */
